{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 296,
  "lineage": "cd9716df-499a-bf0c-51e6-c6654a3c9ee2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0826e89fbdeab3c8f",
            "arn": "arn:aws:ec2:eu-west-2:975050024946:elastic-ip/eipalloc-0826e89fbdeab3c8f",
            "domain": "vpc",
            "id": "eipalloc-0826e89fbdeab3c8f",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-135-144-205.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.135.144.205",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "adish_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-018ff7ece22bf96db",
            "arn": "arn:aws:ec2:eu-west-2:975050024946:instance/i-0697feea9e990386c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mern-ec2-instance-profile",
            "id": "i-0697feea9e990386c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "MERNAppAdishKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07861db6a4d7ce4e9"
              }
            ],
            "primary_network_interface_id": "eni-07861db6a4d7ce4e9",
            "private_dns": "ip-10-0-2-154.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.154",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02521d34dbddad5e2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053506358009b8e56",
            "tags": {
              "Name": "adish-mern-db-server"
            },
            "tags_all": {
              "Name": "adish-mern-db-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0363e50a6444230d8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "i-0697feea9e990386c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.mern_keypair",
            "aws_security_group.adish-db_sg",
            "aws_security_group.adish-web_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.adish-mern_vpc",
            "tls_private_key.mern_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "adish_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-018ff7ece22bf96db",
            "arn": "arn:aws:ec2:eu-west-2:975050024946:instance/i-0169a7ba162a4e3c3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mern-ec2-instance-profile",
            "id": "i-0169a7ba162a4e3c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "MERNAppAdishKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0086a622f8360fec6"
              }
            ],
            "primary_network_interface_id": "eni-0086a622f8360fec6",
            "private_dns": "ip-10-0-1-246.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-18-171-170-197.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.170.197",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9dc7b00a7511881",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0816d25bd8d405e6a",
            "tags": {
              "Name": "adish-mern-web-server"
            },
            "tags_all": {
              "Name": "adish-mern-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a4fc676d105bf240"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "i-0169a7ba162a4e3c3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.mern_keypair",
            "aws_security_group.adish-web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.adish-mern_vpc",
            "tls_private_key.mern_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "adish-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:internet-gateway/igw-0a32652a252654027",
            "id": "igw-0a32652a252654027",
            "owner_id": "975050024946",
            "region": "eu-west-2",
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0826e89fbdeab3c8f",
            "association_id": "eipassoc-005ab68521f93b034",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0de1aaae3c679fbbd",
            "network_interface_id": "eni-07738bde1adef5954",
            "private_ip": "10.0.1.179",
            "public_ip": "13.135.144.205",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0816d25bd8d405e6a",
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.adish-igw",
            "aws_subnet.public_subnet",
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "adish-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:route-table/rtb-042989bc8335f65b8",
            "id": "rtb-042989bc8335f65b8",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0de1aaae3c679fbbd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "rtb-042989bc8335f65b8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.adish-igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "adish-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:route-table/rtb-0a380e6e175b868b9",
            "id": "rtb-0a380e6e175b868b9",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a32652a252654027",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "rtb-0a380e6e175b868b9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.adish-igw",
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0a060b66fe5da3f",
            "region": "eu-west-2",
            "route_table_id": "rtb-042989bc8335f65b8",
            "subnet_id": "subnet-053506358009b8e56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.adish-igw",
            "aws_nat_gateway.nat",
            "aws_route_table.adish-private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d80603c87ec79e6",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a380e6e175b868b9",
            "subnet_id": "subnet-0816d25bd8d405e6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.adish-igw",
            "aws_route_table.adish-public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adish-db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:security-group/sg-0363e50a6444230d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0363e50a6444230d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4fc676d105bf240"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4fc676d105bf240"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "terraform-20260217081354299200000003",
            "name_prefix": "terraform-",
            "owner_id": "975050024946",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "sg-0363e50a6444230d8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.adish-web_sg",
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adish-web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:security-group/sg-0a4fc676d105bf240",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4fc676d105bf240",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Temporary SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "18.206.107.24/29"
                ],
                "description": "SSH from EC2 Instance Connect",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "203.0.113.25/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260217081348586600000001",
            "name_prefix": "terraform-",
            "owner_id": "975050024946",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "sg-0a4fc676d105bf240",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:subnet/subnet-053506358009b8e56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053506358009b8e56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "subnet-053506358009b8e56",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:subnet/subnet-0816d25bd8d405e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0816d25bd8d405e6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "vpc_id": "vpc-040272b8c3e33e1e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "subnet-0816d25bd8d405e6a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.adish-mern_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "adish-mern_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975050024946:vpc/vpc-040272b8c3e33e1e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcec750a820d1b8e",
            "default_route_table_id": "rtb-07ef22b258a18226d",
            "default_security_group_id": "sg-0da61099c0f2917e5",
            "dhcp_options_id": "dopt-004ef3a8c8b398f6d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040272b8c3e33e1e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ef22b258a18226d",
            "owner_id": "975050024946",
            "region": "eu-west-2",
            "tags": {
              "Name": "adish-mern-vpc"
            },
            "tags_all": {
              "Name": "adish-mern-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975050024946",
            "id": "vpc-040272b8c3e33e1e1",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}